compiler/sigilc/src/parser/snapshots/sigilc__parser__tests__snapshot_complex_function.snap
---
source: compiler/sigilc/src/parser/tests.rs
expression: module
---
Module {
    name: "test.si",
    items: [
        Function(
            FunctionDef {
                public: false,
                name: "factorial",
                type_params: [],
                type_param_bounds: [],
                where_clause: [],
                uses_clause: [],
                params: [
                    Param {
                        name: "n",
                        ty: Named(
                            "int",
                        ),
                    },
                ],
                return_type: Named(
                    "int",
                ),
                body: SpannedExpr {
                    expr: Pattern(
                        Recurse {
                            condition: Binary {
                                op: LtEq,
                                left: Ident(
                                    "n",
                                ),
                                right: Int(
                                    1,
                                ),
                            },
                            base_value: Int(
                                1,
                            ),
                            step: Binary {
                                op: Mul,
                                left: Ident(
                                    "n",
                                ),
                                right: Call {
                                    func: Ident(
                                        "self",
                                    ),
                                    args: [
                                        Binary {
                                            op: Sub,
                                            left: Ident(
                                                "n",
                                            ),
                                            right: Int(
                                                1,
                                            ),
                                        },
                                    ],
                                },
                            },
                            memo: false,
                            parallel_threshold: 0,
                        },
                    ),
                    span: 29..64,
                },
                span: 0..64,
            },
        ),
    ],
}
