compiler/sigilc/src/parser/snapshots/sigilc__parser__tests__snapshot_simple_function.snap
---
source: compiler/sigilc/src/parser/tests.rs
expression: module
---
Module {
    name: "test.si",
    items: [
        Function(
            FunctionDef {
                public: false,
                name: "add",
                type_params: [],
                params: [
                    Param {
                        name: "a",
                        ty: Named(
                            "int",
                        ),
                    },
                    Param {
                        name: "b",
                        ty: Named(
                            "int",
                        ),
                    },
                ],
                return_type: Named(
                    "int",
                ),
                body: SpannedExpr {
                    expr: Binary {
                        op: Add,
                        left: Ident(
                            "a",
                        ),
                        right: Ident(
                            "b",
                        ),
                    },
                    span: 31..36,
                },
                span: 0..36,
            },
        ),
    ],
}
