compiler/sigilc/src/parser/snapshots/sigilc__parser__tests__snapshot_type_definition.snap
---
source: compiler/sigilc/src/parser/tests.rs
expression: module
---
Module {
    name: "test.si",
    items: [
        TypeDef(
            TypeDef {
                public: false,
                name: "User",
                params: [],
                kind: Struct(
                    [
                        Field {
                            name: "id",
                            ty: Named(
                                "int",
                            ),
                        },
                        Field {
                            name: "name",
                            ty: Named(
                                "str",
                            ),
                        },
                        Field {
                            name: "email",
                            ty: Optional(
                                Named(
                                    "str",
                                ),
                            ),
                        },
                    ],
                ),
                span: 0..45,
            },
        ),
    ],
}
